tests/ivg/invalid/unknown_feature.ivg
format IVG-3 requires: fancy
